# pirogov-ai-spine-analysis-task

./: .gitignore  DOMAIN_ANALYSIS.md  README.md  TEST_TASK.md  data.dvc  data.yaml  package-lock.json  pyproject.toml  test.txt.dvc
.dvc/: config
data/05_runs/spine_yolo12n_final/: args.yaml  results.csv
scripts/: 01_process_and_merge.py  01_process_data.py  02_augment_data.py  02_clean_duplicate_labels.py  02_clean_scanty_labels.py  03_augment_data.py  04_normalize_data.py  04_simple_normalize_data.py  05_verify_labels.py  06_create_yaml.py  06_visual_analyzer.py  07_train.py  08_predict_visualize.py  08_predict_visualize_streamlit.py  09_auto_annotate.py  10_pack_for_cvat.py  dct_denoise.py  run_local.py  tuner.py  tuner_unified.py
src/: 00_compress_dataset.py  01_crop_thoracic.py  02_batch_process.py  03_resume_training.py  03_train_yolo.py  app_check_data.py  app_test_model.py  check_npz.py  dct_denoise.py  view_spine_gallery.py
