[project]
name = "spine-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasja1142",email = "122717158+Vasja1142@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy (<2.0.0)",
    "cxas (>=0.0.17,<0.0.18)",
    "streamlit (>=1.52.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "ultralytics (>=8.3.235,<9.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

